--- a/web/angular-wallet/src/app/main/accounts/accounts.component.html
+++ b/web/angular-wallet/src/app/main/accounts/accounts.component.html
@@ -5,14 +5,14 @@
     <div class="action-row">
       <div class="inputs">
         <mat-form-field>
-          <input matInput [(ngModel)]="filter"  (keyup)="applyFilter($event.target.value)" placeholder="Filter">
+          <input matInput [(ngModel)]="filter" (keyup)="applyFilter($event.target.value)" placeholder="Filter">
         </mat-form-field>
       </div>
       <div class="buttons">
 
         <button
           mat-mini-fab
-          matTooltip="{{'add_account' | i18n}}"
+          matTooltip="{{'add_account_or_contact' | i18n}}"
           [matMenuTriggerFor]="accountMenu"
         >
           <mat-icon>add</mat-icon>
@@ -47,7 +47,7 @@
           <ng-container matColumnDef="delete">
             <mat-header-cell *matHeaderCellDef>
               <ng-container *ngIf="getSelectedAccounts().length === 0">
-                <mat-icon class="no-button" >delete</mat-icon>
+                <mat-icon class="no-button">delete</mat-icon>
               </ng-container>
               <ng-container *ngIf="getSelectedAccounts().length">
                 <button
@@ -106,24 +106,30 @@
               {{'status' | i18n}}
             </mat-header-cell>
             <mat-cell *matCellDef="let account">
-              <ng-container *ngIf="account.type === 'offline'">
-            <span class="type-badge offline" matTooltip="{{'hint_offline_account' | i18n}}">
-              <mat-icon class="mr-2">remove_red_eye</mat-icon>
-              <div fxHide.xs>{{"account_offline" | i18n}}</div>
-            </span>
+              <ng-container *ngIf="account.isWatchOnly()">
+                <span class="type-badge offline" matTooltip="{{'hint_offline_account' | i18n}}">
+                  <mat-icon class="mr-2">remove_red_eye</mat-icon>
+                  <div fxHide.xs>{{"account_offline" | i18n}}</div>
+                </span>
               </ng-container>
-              <ng-container *ngIf="account.type !== 'offline' && account.confirmed">
-            <span class="type-badge safe" matTooltip="{{'hint_online_account' | i18n}}">
-              <mat-icon class="mr-2">verified_user</mat-icon>
-              <div fxHide.xs>{{"account_safe" | i18n}}</div>
-            </span>
+              <ng-container *ngIf="!account.isWatchOnly() && account.isNew()">
+                <span class="type-badge new" matTooltip="{{'hint_new_account' | i18n}}">
+                  <mat-icon class="mr-2">new_releases</mat-icon>
+                  <div fxHide.xs>{{"account_new" | i18n}}</div>
+                </span>
               </ng-container>
-              <ng-container *ngIf="account.type !== 'offline' && !account.confirmed">
-            <span class="type-badge unsafe" matTooltip="{{'no_public_key_activate' | i18n}}"
-                  (click)="activateAccount(account)">
-              <mat-icon class="mr-2">lock_open</mat-icon>
-              <div fxHide.xs>{{"account_unsafe" | i18n}}</div>
-            </span>
+              <ng-container *ngIf="!account.isWatchOnly() && !account.isNew() && !account.isUnsafe()">
+                <span class="type-badge safe" matTooltip="{{'hint_online_account' | i18n}}">
+                  <mat-icon class="mr-2">verified_user</mat-icon>
+                  <div fxHide.xs>{{"account_safe" | i18n}}</div>
+                </span>
+              </ng-container>
+              <ng-container *ngIf="!account.isWatchOnly() && !account.isNew() && account.isUnsafe()">
+                <span class="type-badge unsafe" matTooltip="{{'no_public_key_activate' | i18n}}"
+                      (click)="activateAccount(account)">
+                  <mat-icon class="mr-2">lock_open</mat-icon>
+                  <div fxHide.xs>{{"account_unsafe" | i18n}}</div>
+                </span>
               </ng-container>
             </mat-cell>
           </ng-container>
@@ -141,7 +147,7 @@
               </button>
               <mat-menu #menu="matMenu">
                 <button
-                  *ngIf="isUnsafeAccount(account)"
+                  *ngIf="canActivate(account)"
                   mat-menu-item (click)="activateAccount(account)">
                   <mat-icon>lock</mat-icon>
                   <span>{{'activate' | i18n}}</span>
@@ -175,9 +181,15 @@
                 </button>
                 <button
                   *ngIf="account.type !== 'offline' && account.confirmed"
-                  mat-menu-item (click)="sendToAccount(account)">
+                  mat-menu-item (click)="sendSignaToAccount(account)">
                   <mat-icon>publish</mat-icon>
                   <span>{{'send_signa' | i18n}}</span>
+                </button>
+                <button
+                  *ngIf="account.type !== 'offline' && account.confirmed"
+                  mat-menu-item (click)="sendMessageToAccount(account)">
+                  <mat-icon>mail_outline</mat-icon>
+                  <span>{{'send_single_message' | i18n}}</span>
                 </button>
                 <button mat-menu-item (click)="deleteAccount(account)">
                   <mat-icon>delete</mat-icon>
@@ -191,11 +203,13 @@
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
 
-        <mat-paginator #paginator *ngIf="paginationEnabled" [pageSize]="10" [pageSizeOptions]="[10, 20, 500]" [showFirstLastButtons]="true">
+        <mat-paginator #paginator *ngIf="paginationEnabled" [pageSize]="10" [pageSizeOptions]="[10, 20, 500]"
+                       [showFirstLastButtons]="true">
         </mat-paginator>
       </mat-tab>
       <mat-tab label="{{ 'contacts' | i18n }}">
-        <app-contacts-table [selectedAccount]="selectedAccount" [filter]="filter" [contacts]="contacts"></app-contacts-table>
+        <app-contacts-table [selectedAccount]="selectedAccount" [filter]="filter"
+                            [contacts]="contacts"></app-contacts-table>
       </mat-tab>
     </mat-tab-group>
 
